fix: market price overlapping on the mobile

--- a/web/src/containers/Order/Order.pcss
+++ b/web/src/containers/Order/Order.pcss
@@ -22,7 +22,6 @@
   .cr-order {
     height: 100%;
     width: 100%;
-    padding: 12px;
 
     .cr-tab-panel__navigation-container {
       background: var(--body-background-color);
