--- a/web/src/index.pcss
+++ b/web/src/index.pcss
@@ -6,8 +6,8 @@
   --font-family: 'Montserrat', helvetica, sans-serif;
   --font-weight: normal;
   --font-size: 12px !important;
-  --font-size-smaller: calc(var(--font-size) * 0.9);
-  --font-size-bigger: calc(var(--font-size) * 1.1);
+  --font-size-smaller: calc(var(--font-size) * 0.8);
+  --font-size-bigger: calc(var(--font-size) * 1.2);
   --line-height: 1.2;
 
   /* layout */
