--- a/web/src/mobile/styles/components/CurrentMarketInfo.pcss
+++ b/web/src/mobile/styles/components/CurrentMarketInfo.pcss
@@ -44,6 +44,7 @@
         font-weight: bold;
         letter-spacing: 0.5px;
         line-height: 22px;
+        white-space: nowrap;
       }
 
       &__chevron {
