--- a/web/src/mobile/styles/components/OpenOrders.pcss
+++ b/web/src/mobile/styles/components/OpenOrders.pcss
@@ -67,7 +67,6 @@
 
     .no-data {
       align-items: flex-start;
-      color: var(--table-text-color);
       display: flex;
       flex-direction: row;
       font-size: 14px;
